--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "d3-axis": "^1.0.12",
     "d3-brush": "^1.0.6",
     "d3-geo": "^1.11.1",
+    "d3-geo-projection": "^2.4.1",
     "d3-scale": "^2.1.2",
     "d3-selection": "^1.3.2",
     "d3-shape": "^1.2.2",
     "d3-svg-legend": "^2.25.6",
+    "d3-timer": "^1.0.9",
     "d3-transition": "^1.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
